change app.json to load schema and seed db

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "tube-rider",
   "scripts": {
-    "postdeploy": "bundle exec rake db:migrate"
+    "postdeploy": "bundle exec rake db:schema:load db:seed"
   },
   "env": {
     "LANG": {
