Generate a schema.rb file

--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,8 @@ default: &default
 development:
   <<: *default
   database: tube_rider_development
+  host: localhost
+  prepared_statements: false
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
